--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
+.content{
   text-align: center;
+  
 }
+label{
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  font-size: 30px;
+  border-bottom: 5px solid whitesmoke;
 }
+.wrp{
+  width: auto;
+  
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
+.c{
+  min-height:80px;
+  width: 800px;
+  margin: auto;
+  background-color: rgba(16, 46, 50, 0.96);
+  color: azure;
+  border-bottom: 5px solid whitesmoke;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
+.card{
+  margin-top: 200px;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
